# rag-core

./: .gitignore  README.md  pyproject.toml
data/docs/: README.md
projects/: README.md
projects/text-vector-db/: README.md  pyproject.toml  requirements.txt
projects/text-vector-db/data/docs/: README.md
projects/text-vector-db/scripts/: build_vector_db.py  query_vector_db.py
projects/text-vector-db/src/rag_core/: __init__.py  chunking.py  vector_db.py
scripts/: build_vector_db.py  query_vector_db.py
src/rag_core/: __init__.py  chunking.py  vector_db.py
