[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-core"
version = "0.1.0"
description = "Core building blocks for RAG data workflows and AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

